Implement secure version 1 HTTP API
